--- a/templates/transaccion_completa_mall/transaction_committed.html
+++ b/templates/transaccion_completa_mall/transaction_committed.html
@@ -7,7 +7,7 @@
 {{ resp }}
 
 <h1>Obtener status de la transacción</h1>
-<form class="transaccion_completa_form" action="/transaccion_completa/mall/status/<%= @req['token'] %>" method="get" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
+<form class="transaccion_completa_form" action="/transaccion_completa/mall/status/{{ req.get('token') }}" method="get" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
 
   <button type="submit">Consultar estado</button>
 </form>
@@ -36,7 +36,7 @@
 <form class="transaccion_completa_form" action="/transaccion_completa/mall/refund" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
 
   <label for="token">Token</label>
-  <input name="token" id="token" value="{{ req.get('token') }}<%= @req['token'] %>">
+  <input name="token" id="token" value="{{ req.get('token') }}">
 
   <label for="child_commerce_code">Codigo de comercio (hijo)</label>
   <input name="child_commerce_code" value="{{ resp.details[1]['commerce_code'] }}">
