--- a/templates/transaccion_completa/create.html
+++ b/templates/transaccion_completa/create.html
@@ -2,7 +2,7 @@
 <body>
 <h1>Ejemplo Transaccion completa</h1>
 
-<form class="transaccion_completa_form" action="/transaccion_completa/create" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
+<form class="transaccion_completa_form" action="/fulltransaction/create" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
   <label for="buy_order">
     Orden de compra
   </label>
