--- a/templates/transaccion_completa/transaction_committed.html
+++ b/templates/transaccion_completa/transaction_committed.html
@@ -7,13 +7,13 @@
 {{ resp }}
 
 <h1>Obtener status de la transacción</h1>
-<form class="transaccion_completa_form" action="/transaccion_completa/status/{{ req.get('token') }}" method="get" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
+<form class="transaccion_completa_form" action="/fulltransaction/status/{{ req.get('token') }}" method="get" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
 
   <button type="submit">Consultar estado</button>
 </form>
 
 <h1>Reembolso de la transacción</h1>
-<form class="transaccion_completa_form" action="/transaccion_completa/refund" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
+<form class="transaccion_completa_form" action="/fulltransaction/refund" method="post" style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
 
   <label for="token">Token</label>
   <input name="token" id="token" value="{{ req.get('token') }}">
