Add example for Webpay Plus Transaction.create

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <tbody>
     <tr>
         <td>Webpay Plus</td>
-        <td><a href="/webpayplus">Crear Transacci&oacute;n</a></td>
+        <td><a href="/webpay-plus/create">Crear Transacci&oacute;n</a></td>
         <td><a href="/webpayplus-refund-form">Reembolsar Transacci&oacute;n</a></td>
         <td><a href="/webpayplus-status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
