--- a/templates/index.html
+++ b/templates/index.html
@@ -72,9 +72,9 @@
 
     <tr>
     <td>Patpass Comercio</td>
-    <td><a href="/patpass-comercio/start">Crear Transacci&oacute;n</a></td>
+    <td><a href="/patpass-comercio/inscription">Crear Transacci&oacute;n</a></td>
     <td><a href="#"></a></td>
-    <td><a href="/patpass-comercio/status">Consultar Estado Transacci&oacute;n</a></td>
+    <td><a href="#"></a></td>
     </tr>
     </tbody>
 </table>
