Normalise routes names

--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
 
     <tr>
     <td>Patpass Comercio</td>
-    <td><a href="/patpass-comercio/inscription">Crear Transacci&oacute;n</a></td>
+    <td><a href="/patpass-comercio/start">Crear Transacci&oacute;n</a></td>
     <td><a href="#"></a></td>
     <td><a href="#"></a></td>
     </tr>
