--- a/templates/patpass_comercio/finish_inscription.html
+++ b/templates/patpass_comercio/finish_inscription.html
@@ -21,7 +21,7 @@ token_ws: {{ token }}
 <h3>result</h3>
 {{ response }}
 </div>
-<p><samp>Subscription successfully with Patpass comercio</samp></p>
+<p><samp>Subscription finished successfully</samp></p>
 <br>
 <form action="/patpass-comercio/status" method="POST">
 <input type="hidden" name="tokenComercio" value="{{ token }}">
