--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <tr>
         <td>Webpay Plus</td>
         <td><a href="/webpay-plus/create">Crear Transacci&oacute;n</a></td>
-        <td><a href="/webpayplus-refund-form">Reembolsar Transacci&oacute;n</a></td>
+        <td><a href="/webpay-plus/refund-form">Reembolsar Transacci&oacute;n</a></td>
         <td><a href="/webpayplus-status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
     <tr>
