Add Oneclick mall example

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,8 @@
 
     <tr>
         <td>Oneclick Mall</td>
-        <td><a href="/oneclick-mall/start">Comenzar Inscripci&oacute;n</a></td>
-        <td><a href="/oneclick-mall/refund-form">Reembolsar Transacci&oacute;n</a></td>
+        <td><a href="/oneclick-mall/start-form">Comenzar Inscripci&oacute;n</a></td>
+        <td><a href="#"></a></td>
         <td><a href="/oneclick-mall/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
 
