--- a/templates/oneclick/delete.html
+++ b/templates/oneclick/delete.html
@@ -23,7 +23,7 @@
 </div>
 <br>
 <form action="/oneclick-mall/delete" method="POST">
-    <input type="hidden" name="token" value="{{ token_inscription }}">
+    <input type="hidden" name="tbk_user" value="{{ tbk_user }}">
     <input type="hidden" name="user_name" value="username">
 
 
