--- a/templates/oneclick/refund.html
+++ b/templates/oneclick/refund.html
@@ -25,7 +25,7 @@
 <form action="/oneclick-mall/refund" method="POST">
 
     <input type="hidden" id="buy_order" name="buy_order" value="{{ buy_order }}">
-    <input type="hidden" id="token_inscription" name="token_inscription" value="{{ token_inscription }}">
+    <input type="hidden" id="tbk_user" name="tbk_user" value="{{ tbk_user }}">
 
     <h3>Comercio 1</h3>
 
