--- a/templates/oneclick/start.html
+++ b/templates/oneclick/start.html
@@ -17,7 +17,7 @@
 
   <div class="form-group">
       <label for="user_name">User Name</label>
-      <input class="form-control" id="user_name" name="user_name" value="username" readonly/>
+      <input class="form-control" id="user_name" name="user_name" value="username" />
   </div>
   <div class="form-group">
     <label for="email">Email</label>
