Add the create method for webpay plus mall

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     </tr>
     <tr>
         <td>Webpay Plus Mall</td>
-        <td><a href="/webpayplusmall">Crear Transacci&oacute;n</a></td>
+        <td><a href="/webpay-plus-mall/create">Crear Transacci&oacute;n</a></td>
         <td><a href="/webpayplusmall-refund-form">Reembolsar Transacci&oacute;n</a></td>
         <td><a href="/webpayplusmall-status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
