Add capture method from webpay plus deferred

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,9 +30,9 @@
     </tr>
     <tr>
         <td>Webpay Plus Captura Diferida</td>
-        <td><a href="/webpayplusdeferred">Crear Transacci&oacute;n</a></td>
+        <td><a href="/webpay-plus-deferred/create">Crear Transacci&oacute;n</a></td>
         <td><a href="/webpayplusdeferred-refund-form">Reembolsar Transacci&oacute;n</a></td>
-        <td><a href="/webpayplusdeferred-status-form">Consultar Estado Transacci&oacute;n</a></td>
+        <td><a href="/webpay-plus-deferred/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
 
     <tr>
