--- a/templates/webpay/plus_deferred/capture.html
+++ b/templates/webpay/plus_deferred/capture.html
@@ -20,6 +20,11 @@
     {{ response }}
 </div>
 <br>
+<form action="/webpay-plus-deferred/refund" method="POST">
+    <input type="hidden" name="token_ws" value="{{ token }}">
+    <input type="hidden" name="amount" value="{{ response.captured_amount }}">
+    <input type="submit" class="btn btn-success" value="Reembolsar Transacci&oacute;n (Anular)">
+</form>
 <br>
 <a href="/">&laquo; volver a index</a>
 </body>
