Fix path names and hard code commerce codes in html

--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,9 @@
 
     <tr>
         <td>Oneclick Mall</td>
-        <td><a href="/oneclick-mall/start-form">Comenzar Inscripci&oacute;n</a></td>
+        <td><a href="/oneclick-mall/start">Comenzar Inscripci&oacute;n</a></td>
         <td><a href="#"></a></td>
-        <td><a href="/oneclick-mall/status-form">Consultar Estado Transacci&oacute;n</a></td>
+        <td><a href="/oneclick-mall/status">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
 
     <tr>
