--- a/templates/oneclick/authorize.html
+++ b/templates/oneclick/authorize.html
@@ -33,7 +33,7 @@
   <hr>
 <div class="form-group">
   <label for="details_commerce_code_1">Codigo de comercio (comercio hijo)</label>
-  <input class="form-control" id="details_commerce_code_1" name="details[0][commerce_code]" value="597055555542">
+  <input class="form-control" id="details_commerce_code_1" name="details[0][commerce_code]" value="{{ commerce_code_1 }}">
 </div>
 <div class="form-group">
   <label for="details_buy_order_1">Orden de compra (comercio hijo)</label>
@@ -51,7 +51,7 @@
   <hr>
 <div class="form-group">
   <label for="details_commerce_code_2">Codigo de comercio (comercio hijo)</label>
-  <input class="form-control" id="details_commerce_code_2" name="details[1][commerce_code]" value="597055555543">
+  <input class="form-control" id="details_commerce_code_2" name="details[1][commerce_code]" value="{{ commerce_code_2 }}">
 </div>
 <div class="form-group">
   <label for="details_buy_order_2">Orden de compra (comercio hijo)</label>
