Add rcapturemethod from webpay plus dmall eferred

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,9 +37,9 @@
 
     <tr>
     <td>Webpay Plus Mall Mall Deferred</td>
-    <td><a href="/webpayplusmalldeferred">Crear Transacci&oacute;n</a></td>
-    <td><a href="/webpayplusmalldeferred-refund-form">Reembolsar Transacci&oacute;n</a></td>
-    <td><a href="/webpayplusmalldeferred-status-form">Consultar Estado Transacci&oacute;n</a></td>
+    <td><a href="/webpay-plus-mall-deferred/create">Crear Transacci&oacute;n</a></td>
+    <td><a href="/webpay-plus-mall-deferred/refund-form">Reembolsar Transacci&oacute;n</a></td>
+    <td><a href="/webpay-plus-mall-deferred/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
 
     <tr>
