--- a/templates/webpay/plus_mall_deferred/capture.html
+++ b/templates/webpay/plus_mall_deferred/capture.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Ejemplo Webpay Plus Mall Deferred- Capturar Transacci&oacute;n</title>
@@ -6,21 +7,22 @@
 </head>
 
 <body class="container">
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Deferred - Capturar Transacci&oacute;nn</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Step: Refund</li>
-    </ol>
-</nav>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Deferred - Capturar
+                    Transacci&oacute;nn</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Step: Refund</li>
+        </ol>
+    </nav>
 
-<div class="alert alert-warning" role="alert">
-    <h3>Request</h3>
-    token_ws: {{ token }}, amount: {{ amount }}
-</div>
-<div class="alert alert-primary" role="alert">
-    <h3>Result</h3>
-    {{ response }}
-</div>
-<a href="/">&laquo; volver a index</a>
+    <div class="alert alert-warning" role="alert">
+        <h3>Request</h3>
+        token_ws: {{ token }}, amount: {{ amount }}
+    </div>
+    <div class="alert alert-primary" role="alert">
+        <h3>Result</h3>
+        {{ response }}
+    </div>
+    <a href="/">&laquo; volver a index</a>
 </body>
 </html>
