--- a/templates/webpay/plus_mall_deferred/commit.html
+++ b/templates/webpay/plus_mall_deferred/commit.html
@@ -24,57 +24,64 @@
     </div>
     <br>
     <div class='row'>
-        <form action="/webpay-plus-mall-deferred/capture" method="POST" class='.col-md-6' style="margin: 0px 100px;">
-            <div class="form-group">
-                <label for="details_buy_order">Token</label>
-                <input type="text" name="token_ws" value="{{ token }}" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Amount</label>
-                <input type="text" name="amount" value="{{ response.details[0].amount }}" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Commerce Code</label>
-                <input type="text" name="commerce_code" value="{{ response.details[0].commerce_code }}"
-                    class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Authorization Code</label>
-                <input type="text" name="authorization_code" value="{{ response.details[0].authorization_code }}"
-                    class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Buy Order</label>
-                <input type="text" name="buy_order" value="{{ response.details[0].buy_order }}" class="form-control">
-            </div>
-            <input type="submit" class="btn btn-success" value="Capturar">
-        </form>
-
-        <form action="/webpay-plus-mall-deferred/capture" method="POST" class='.col-md-6' style="margin: 0px 100px;">
-            <div class="form-group">
-                <label for="details_buy_order">Token</label>
-                <input type="text" name="token_ws" value="{{ token }}" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Amount</label>
-                <input type="text" name="amount" value="{{ response.details[1].amount }}" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Commerce Code</label>
-                <input type="text" name="commerce_code" value="{{ response.details[1].commerce_code }}"
-                    class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Authorization Code</label>
-                <input type="text" name="authorization_code" value="{{ response.details[1].authorization_code }}"
-                    class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="details_buy_order">Buy Order</label>
-                <input type="text" name="buy_order" value="{{ response.details[1].buy_order }}" class="form-control">
-            </div>
-            <input type="submit" class="btn btn-success" value="Capturar">
-        </form>
+        <div class="md-6">
+            <form action="/webpay-plus-mall-deferred/capture" method="POST" class='.col-md-6'
+                style="margin: 0px 100px;">
+                <div class="form-group">
+                    <label for="details_buy_order">Token</label>
+                    <input type="text" name="token_ws" value="{{ token }}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Amount</label>
+                    <input type="text" name="amount" value="{{ response.details[0].amount }}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Commerce Code</label>
+                    <input type="text" name="commerce_code" value="{{ response.details[0].commerce_code }}"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Authorization Code</label>
+                    <input type="text" name="authorization_code" value="{{ response.details[0].authorization_code }}"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Buy Order</label>
+                    <input type="text" name="buy_order" value="{{ response.details[0].buy_order }}"
+                        class="form-control">
+                </div>
+                <input type="submit" class="btn btn-success" value="Capturar">
+            </form>
+        </div>
+        <div class="md-6">
+            <form action="/webpay-plus-mall-deferred/capture" method="POST" class='.col-md-6'
+                style="margin: 0px 100px;">
+                <div class="form-group">
+                    <label for="details_buy_order">Token</label>
+                    <input type="text" name="token_ws" value="{{ token }}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Amount</label>
+                    <input type="text" name="amount" value="{{ response.details[1].amount }}" class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Commerce Code</label>
+                    <input type="text" name="commerce_code" value="{{ response.details[1].commerce_code }}"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Authorization Code</label>
+                    <input type="text" name="authorization_code" value="{{ response.details[1].authorization_code }}"
+                        class="form-control">
+                </div>
+                <div class="form-group">
+                    <label for="details_buy_order">Buy Order</label>
+                    <input type="text" name="buy_order" value="{{ response.details[1].buy_order }}"
+                        class="form-control">
+                </div>
+                <input type="submit" class="btn btn-success" value="Capturar">
+            </form>
+        </div>
     </div>
     <a href="/">&laquo; Volver a index</a>
 </body>
