--- a/templates/webpay/plus_mall_deferred/status-form.html
+++ b/templates/webpay/plus_mall_deferred/status-form.html
@@ -1,4 +1,5 @@
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Ejemplos Patpass Webpay - Solicitar Estado</title>
@@ -6,23 +7,26 @@
 </head>
 
 <body class="container">
-<nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay - Solicitar Estado</a></li>
-    </ol>
-</nav>
-<div class="card">
-    <div class="card-body col-sm-4">
-        <form id="formulario" action="/webpay-plus-mall/status" method="POST">
-            <legend>Formulario solicitud de estado</legend>
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay - Solicitar Estado</a></li>
+        </ol>
+    </nav>
+    <div class="card">
+        <form action="/webpay-plus-mall-deferred/status" method="POST" style="margin: 20px 100px;">
             <div class="form-group">
-                <label>token_ws:</label><input name="token_ws" type="text" class="form-control"/>
-            </div>&nbsp;&nbsp;&nbsp;
-            <input name="enviar" type="submit" value="Enviar" class="btn btn-primary"/>
+                <label for="details_buy_order">Token</label>
+                <input type="text" name="token_ws" class="form-control">
+            </div>
+            <div class="form-group">
+                <label for="details_buy_order">Commerce Code</label>
+                <input type="text" name="commerce_code" class="form-control">
+            </div>
+            <input type="submit" class="btn btn-success" value="status">
         </form>
     </div>
-</div>
-<br>
-<a href="/">&laquo; volver a index</a>
+    <br>
+    <a href="/">&laquo; volver a index</a>
 </body>
+
 </html>
