--- a/templates/webpay/plus_mall_deferred/commit.html
+++ b/templates/webpay/plus_mall_deferred/commit.html
@@ -2,15 +2,15 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall - Confirmar Transacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Mall Deferred - Confirmar Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Mall - Confirmar Transacci&oacute;n</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Step: Commit Transaction</li>
+            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Mall Deferred - Confirmar Transacci&oacute;n</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Step: Commit Transacti&oacute;n</li>
         </ol>
     </nav>
 
