--- a/templates/webpay/plus_mall_deferred/status.html
+++ b/templates/webpay/plus_mall_deferred/status.html
@@ -8,12 +8,11 @@
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay - Estado de Estado</a></li>
+        <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Pluss Mall Deferred- Estado de Estado</a></li>
     </ol>
 </nav>
 <div class="alert alert-warning" role="alert">
     <h3>Request:</h3>
-    <h3>request</h3>
     token_ws: {{ token }}
 </div>
 <div class="alert alert-primary" role="alert">
