--- a/templates/webpay/plus_mall_deferred/refund-form.html
+++ b/templates/webpay/plus_mall_deferred/refund-form.html
@@ -1,38 +1,40 @@
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall- Transacci&oacute;n Anulaci&oacute;n</title>
+    <title>Ejemplo Webpay - Transaccion Refund</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
-    <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Mall- Transaccion Anulaci&oacute;n</a></li>
-    </ol>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay plus mall deferred- Transaccion Refund</a></li>
+        </ol>
     </nav>
 
-    <!-- <div class="card">
-    <div class="card-body col-sm-4">
-        <form id="formulario" action="/webpay-plus-mall/refund" method="POST">
+    <div class="card">
+        <div class="card-body col-sm-4">
+            <form id="formulario" action="/webpay-plus-mall-deferred/refund" method="POST">
                 <legend>Formulario de Anulaci&oacute;n</legend>
                 <div class="form-group">
-                    <label>Token:</label><input name="token_ws" class="form-control"/>
+                    <label>token_ws:</label><input name="token_ws" type="text" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label>Commerce Code:</label><input name="commerce_code" class="form-control"/>
+                    <label>buy_order:</label><input name="buy_order" type="text" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label>Buy Order:</label><input name="buy_order" class="form-control"/>
+                    <label>commerce_code:</label><input name="commerce_code" type="text" class="form-control" />
                 </div>
                 <div class="form-group">
-                    <label>Amount:</label><input name="amount" class="form-control"/>
+                    <label>amount:</label><input name="amount" type="text" class="form-control" />
                 </div>
-                <input name="enviar" type="submit" value="Enviar" class="btn btn-primary"/>
-        </form>
+                <input name="enviar" type="submit" value="Enviar" class="btn btn-primary" />
+            </form>
+        </div>
     </div>
-    </div> -->
-<br>
-<a href="/">&laquo; Volver a index</a>
+    <br>
+    <a href="/">&laquo; volver a index</a>
 </body>
+
 </html>
