--- a/templates/webpay/plus_mall_deferred/status-form.html
+++ b/templates/webpay/plus_mall_deferred/status-form.html
@@ -9,7 +9,7 @@
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplos Patpass Webpay - Solicitar Estado</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Deferred - Solicitar Estado</a></li>
         </ol>
     </nav>
     <div class="card">
