--- a/templates/webpay/plus_mall_deferred/create.html
+++ b/templates/webpay/plus_mall_deferred/create.html
@@ -1,17 +1,17 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred- Transacci&oacute;n Crear</title>
+    <title>Ejemplo Webpay Plus Mall Diferido- Transacci&oacute;n Crear</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Mall Deferred- Transaccion Crear</a></li>
+    <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Mall Diferido- Transaccion Crear</a></li>
     </ol>
     </nav>
-  <h1>Ejemplo Transacci&oacute;n completa mall diferida</h1>
+  <h1>Ejemplo Webpay plus mall diferido</h1>
 
   <form class="transaccion_completa_form" action="/webpay-plus-mall-deferred/create" method="post"
     style="display: flex; flex-direction:column; width:50%;font-size: 20px;">
