--- a/templates/webpay/plus_mall_deferred/created.html
+++ b/templates/webpay/plus_mall_deferred/created.html
@@ -9,7 +9,7 @@
 <body>
   <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-      <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Deferred - Transacci&oacute;n</a></li>
+      <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Diferido - Transacci&oacute;n</a></li>
       <li class="breadcrumb-item active" aria-current="page">Step: Transaction creada</li>
     </ol>
   </nav>
