--- a/templates/webpay/plus_mall_deferred/refund-form.html
+++ b/templates/webpay/plus_mall_deferred/refund-form.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay - Transaccion Refund</title>
+    <title>Ejemplo Webpay Plus Mall Diferido - Transaccion Refund</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay plus mall deferred- Transaccion Refund</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplo Webpay plus mall diferido- Transaccion Refund</a></li>
         </ol>
     </nav>
 
