--- a/templates/webpay/plus_mall_deferred/refund.html
+++ b/templates/webpay/plus_mall_deferred/refund.html
@@ -2,16 +2,16 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Mall Deferred - Reembolsar Transacci&oacute;n</title>
+    <title>Ejemplo Webpay Plus Mall Diferido - Reembolsar Transacci&oacute;n</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Deferred - Reembolsar
+            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Diferido - Reembolsar
                     Transacci&oacute;nn</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Step: Deferred</li>
+            <li class="breadcrumb-item active" aria-current="page">Step: Reembolsar</li>
         </ol>
     </nav>
 
