--- a/templates/webpay/plus_mall_deferred/status-form.html
+++ b/templates/webpay/plus_mall_deferred/status-form.html
@@ -2,14 +2,14 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplos Patpass Webpay - Solicitar Estado</title>
+    <title>Ejemplos Webpay Plus Mall Diferido - Solicitar Estado</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Deferred - Solicitar Estado</a></li>
+            <li class="breadcrumb-item"><a href="#">Ejemplos Webpay Plus Mall Diferido - Solicitar Estado</a></li>
         </ol>
     </nav>
     <div class="card">
