Add API 1.3 methods for deferred capture

--- a/templates/index.html
+++ b/templates/index.html
@@ -48,6 +48,13 @@
         <td><a href="#"></a></td>
         <td><a href="/oneclick-mall/status">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
+    
+    <tr>
+        <td>Oneclick Mall Deferred</td>
+        <td><a href="/oneclick-mall-deferred/start">Comenzar Inscripci&oacute;n</a></td>
+        <td><a href="#"></a></td>
+        <td><a href="#"></a></td>
+    </tr>
 
     <tr>
     <td>Transacci&oacute;n Completa</td>
@@ -55,26 +62,38 @@
     <td><a href="/fulltransaction/refund-form">Reembolsar Transacci&oacute;n</a></td>
     <td><a href="/fulltransaction/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
-
     <tr>
-    <td>Patpass-webpay</td>
-    <td><a href="/patpass-webpay/create">Crear Transacci&oacute;n</a></td>
-    <td>-</td>
-    <td><a href="/patpass-webpay/status-form">Consultar Estado Transacci&oacute;n</a></td>
+        <td>Transacci&oacute;n Completa Deferred</td>
+        <td><a href="/fulltransaction-deferred/create">Crear Transacci&oacute;n</a></td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+    <tr>
+        <td>Patpass-webpay</td>
+        <td><a href="/patpass-webpay/create">Crear Transacci&oacute;n</a></td>
+        <td>-</td>
+        <td><a href="/patpass-webpay/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
 
     <tr>
-    <td>Transacci&oacute;n Completa Mall</td>
-    <td><a href="/mallfulltransaction/create">Crear Transacci&oacute;n</a></td>
-    <td><a href="/mallfulltransaction/refund-form">Reembolsar Transacci&oacute;n</a></td>
-    <td><a href="/mallfulltransaction/status-form">Consultar Estado Transacci&oacute;n</a></td>
+        <td>Transacci&oacute;n Completa Mall</td>
+        <td><a href="/mallfulltransaction/create">Crear Transacci&oacute;n</a></td>
+        <td><a href="/mallfulltransaction/refund-form">Reembolsar Transacci&oacute;n</a></td>
+        <td><a href="/mallfulltransaction/status-form">Consultar Estado Transacci&oacute;n</a></td>
     </tr>
 
     <tr>
-    <td>Patpass Comercio</td>
-    <td><a href="/patpass-comercio/start">Crear Transacci&oacute;n</a></td>
-    <td><a href="#"></a></td>
-    <td><a href="#"></a></td>
+        <td>Transacci&oacute;n Completa Mall Deferred</td>
+        <td><a href="/mallfulltransaction-deferred/create">Crear Transacci&oacute;n</a></td>
+        <td>-</td>
+        <td>-</td>
+    </tr>
+
+    <tr>
+        <td>Patpass Comercio</td>
+        <td><a href="/patpass-comercio/start">Crear Transacci&oacute;n</a></td>
+        <td><a href="#"></a></td>
+        <td><a href="#"></a></td>
     </tr>
     </tbody>
 </table>
