--- a/templates/webpay/plus_mall_deferred/commit.html
+++ b/templates/webpay/plus_mall_deferred/commit.html
@@ -67,6 +67,57 @@
                 </div>
                 <input name="enviar" type="submit" value="Reembolsar" class="btn btn-success" />
             </form>
+            <form id="formulario" action="/webpay-plus-mall-deferred/increase_amount" method="POST" style="margin: 20px 100px;">
+                <div class="form-group d-none">
+                    <label>token_ws:</label><input name="token_ws" type="text" value="{{ token }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>buy_order:</label><input name="buy_order" type="text" value="{{ response.details[0].buy_order }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>commerce_code:</label><input name="commerce_code" type="text" value="{{ response.details[0].commerce_code }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>amount:</label><input name="amount" type="text" value="{{ response.details[0].amount }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>Authorization Code:</label><input name="authorization_code" type="text" value="{{ response.details[0].authorization_code }}" class="form-control" />
+                </div>
+                <input name="enviar" type="submit" value="Incrementar monto" class="btn btn-success" />
+            </form>
+            <form id="formulario" action="/webpay-plus-mall-deferred/reverse_preauthorized_amount" method="POST" style="margin: 20px 100px;">
+                <div class="form-group d-none">
+                    <label>token_ws:</label><input name="token_ws" type="text" value="{{ token }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>buy_order:</label><input name="buy_order" type="text" value="{{ response.details[0].buy_order }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>commerce_code:</label><input name="commerce_code" type="text" value="{{ response.details[0].commerce_code }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>amount:</label><input name="amount" type="text" value="{{ response.details[0].amount }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>Authorization Code:</label><input name="authorization_code" type="text" value="{{ response.details[0].authorization_code }}" class="form-control" />
+                </div>
+                <input name="enviar" type="submit" value="Reversa monto pre autorizado" class="btn btn-success" />
+            </form>
+            <form id="formulario" action="/webpay-plus-mall-deferred/increase_date" method="POST" style="margin: 20px 100px;">
+                <div class="form-group d-none">
+                    <label>token_ws:</label><input name="token_ws" type="text" value="{{ token }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>buy_order:</label><input name="buy_order" type="text" value="{{ response.details[0].buy_order }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>commerce_code:</label><input name="commerce_code" type="text" value="{{ response.details[0].commerce_code }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>Authorization Code:</label><input name="authorization_code" type="text" value="{{ response.details[0].authorization_code }}" class="form-control" />
+                </div>
+                <input name="enviar" type="submit" value="Incrementar fecha de expiracion" class="btn btn-success" />
+            </form>
         </div>
         <div class="col-md-6">
             <form action="/webpay-plus-mall-deferred/capture" method="POST" class='.col-md-6'
@@ -110,6 +161,57 @@
                     <label>amount:</label><input name="amount" type="text" value="{{ response.details[1].amount }}" class="form-control" />
                 </div>
                 <input name="enviar" type="submit" value="Reembolsar" class="btn btn-success" />
+            </form>
+            <form id="formulario" action="/webpay-plus-mall-deferred/increase_amount" method="POST" style="margin: 20px 100px;">
+                <div class="form-group d-none">
+                    <label>token_ws:</label><input name="token_ws" type="text" value="{{ token }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>buy_order:</label><input name="buy_order" type="text" value="{{ response.details[1].buy_order }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>commerce_code:</label><input name="commerce_code" type="text" value="{{ response.details[1].commerce_code }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>amount:</label><input name="amount" type="text" value="{{ response.details[1].amount }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>Authorization Code:</label><input name="authorization_code" type="text" value="{{ response.details[1].authorization_code }}" class="form-control" />
+                </div>
+                <input name="enviar" type="submit" value="Incrementar monto" class="btn btn-success" />
+            </form>
+            <form id="formulario" action="/webpay-plus-mall-deferred/reverse_preauthorized_amount" method="POST" style="margin: 20px 100px;">
+                <div class="form-group d-none">
+                    <label>token_ws:</label><input name="token_ws" type="text" value="{{ token }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>buy_order:</label><input name="buy_order" type="text" value="{{ response.details[1].buy_order }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>commerce_code:</label><input name="commerce_code" type="text" value="{{ response.details[1].commerce_code }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>amount:</label><input name="amount" type="text" value="{{ response.details[1].amount }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>Authorization Code:</label><input name="authorization_code" type="text" value="{{ response.details[1].authorization_code }}" class="form-control" />
+                </div>
+                <input name="enviar" type="submit" value="Reversa monto pre autorizado" class="btn btn-success" />
+            </form>
+            <form id="formulario" action="/webpay-plus-mall-deferred/increase_date" method="POST" style="margin: 20px 100px;">
+                <div class="form-group d-none">
+                    <label>token_ws:</label><input name="token_ws" type="text" value="{{ token }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>buy_order:</label><input name="buy_order" type="text" value="{{ response.details[1].buy_order }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>commerce_code:</label><input name="commerce_code" type="text" value="{{ response.details[1].commerce_code }}" class="form-control" />
+                </div>
+                <div class="form-group d-none">
+                    <label>Authorization Code:</label><input name="authorization_code" type="text" value="{{ response.details[1].authorization_code }}" class="form-control" />
+                </div>
+                <input name="enviar" type="submit" value="Incrementar fecha de expiracion" class="btn btn-success" />
             </form>
         </div>
     </div>
