--- a/templates/transaccion_completa/deferred/status.html
+++ b/templates/transaccion_completa/deferred/status.html
@@ -1,59 +1,55 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Ejemplo Webpay Plus Deferred- Confirmar Transacci&oacute;n</title>
+    <title>Ejemplo Transaccion completa Deferred- Estado de trx</title>
     {% include 'include/header.html' %}
 </head>
 
 <body class="container">
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="#">Ejemplo Webpay Plus Deferred - Confirmar Transacci&oacute;n</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Step: Commit Transaction</li>
+        <li class="breadcrumb-item"><a href="#">Ejemplo Transaccion completa Deferred - Estado de trx</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Step: Status</li>
     </ol>
 </nav>
 
 <div class="alert alert-warning" role="alert">
     <h3>Request</h3>
-    token_ws: {{ token }}
+    {{ request }}
 </div>
 <div class="alert alert-primary" role="alert">
     <h3>result</h3>
     {{ response }}
 </div>
 
-<form action="/webpay-plus-deferred/status" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
-    <input type="submit" class="btn btn-success" value="Obtener Status">
-</form>
-
-<form action="/webpay-plus-deferred/increase_amount" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
+<form action="/fulltransaction-deferred/increase_amount" method="POST">
+    <input type="hidden" name="token" value="{{ request.token }}">
     <input type="hidden" name="buy_order" value="{{ response.buy_order }}">
     <input type="hidden" name="authorization_code" value="{{ response.authorization_code }}">
     <input type="submit" class="btn btn-success" value="Incrementar monto">
 </form>
 
-<form action="/webpay-plus-deferred/reverse_amount" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
+<form action="/fulltransaction-deferred/increase_date" method="POST">
+    <input type="hidden" name="token" value="{{ request.token }}">
+    <input type="hidden" name="buy_order" value="{{ response.buy_order }}">
+    <input type="hidden" name="authorization_code" value="{{ response.authorization_code }}">
+    <input type="submit" class="btn btn-success" value="Incrementar fecha expiracion">
+</form>
+
+<form action="/fulltransaction-deferred/reverse_amount" method="POST">
+    <input type="hidden" name="token" value="{{ request.token }}">
     <input type="hidden" name="buy_order" value="{{ response.buy_order }}">
     <input type="hidden" name="authorization_code" value="{{ response.authorization_code }}">
     <input type="submit" class="btn btn-success" value="Revertir monto">
 </form>
 
-<form action="/webpay-plus-deferred/increase_date" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
-    <input type="hidden" name="buy_order" value="{{ response.buy_order }}">
-    <input type="hidden" name="authorization_code" value="{{ response.authorization_code }}">
-    <input type="submit" class="btn btn-success" value="Incrementar fecha expiracion">
-</form>
-<form action="/webpay-plus-deferred/history" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
+<form action="/fulltransaction-deferred/history" method="POST">
+    <input type="hidden" name="token" value="{{ request.token }}">
     <input type="submit" class="btn btn-success" value="Historial">
 </form>
 
-<form action="/webpay-plus-deferred/capture" method="POST">
-    <input type="hidden" name="token_ws" value="{{ token }}">
+<form action="/fulltransaction-deferred/capture" method="POST">
+    <input type="hidden" name="token" value="{{ request.token }}">
     <input type="hidden" name="buy_order" value="{{ response.buy_order }}">
     <input type="hidden" name="authorization_code" value="{{ response.authorization_code }}">
     <input type="hidden" name="capture_amount" value="{{ response.amount }}">
